--- a/ZeldaRTP[1.3.2]_ANDROID-JS.html
+++ b/ZeldaRTP[1.3.2]_ANDROID-JS.html
@@ -17,7 +17,7 @@
     You should have received a copy of the GNU General Public License
     along with this program.
 
-    If not, see <https://www.gnu.org/licenses/>.
+    If not, see https://www.gnu.org/licenses.
 </div>
 <html>
 <head></head>
